[package]
edition = "2021"
name = "advent-of-rust-code-2023"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
itertools = "0.12.0"
pathfinding = "4.6.0"
rayon = "1.8.0"
tree_iterators_rs = "1.1.4"
